imagedemodir	    = $(prefix)/share/@PACKAGE@/@VERSION@/images
imagedemo_DATA	    = down.xpm left.xpm right.xpm stopsign.xpm tb_copy.xpm	\
		      tb_cut.xpm tb_edit.xpm tb_evalbuf.xpm tb_exit.xpm		\
		      tb_fileopen.xpm tb_paste.xpm up.xpm linux.xpm		\
		      gnome-error.xpm gnome-info.xpm gnome-question.xpm		\
		      gnome-warning.xpm

clean:
	echo "nothing to do"

distclean: clean