#
#  Makefile.in 	-- Makefile for Curl Extension
#
# Copyright © 2021-2022 Erick Gallesio - Polytech Nice-Sophia <eg@unice.fr>
#
#           Author: Erick Gallesio [eg@unice.fr]
#    Creation date: 18-Jun-2021 08:18
# Last file update:  7-Feb-2022 15:53 (eg)
#

SUBDIRS=lib/stklos demos

clean-am:
	rm -f *~

distclean-am:
	rm -f Makefile
