#
#  Makefile.in 	-- Makefile for GTklos Extension
#
# Copyright © 2021-2023 Erick Gallesio <eg@stklos.net>
#
#           Author: Erick Gallesio [eg@unice.fr]
#    Creation date: 18-Jun-2021 08:18
# Last file update: 20-Feb-2023 11:04 (eg)
#

SUBDIRS=lib/stklos demos

clean-am:
	(cd demos; make clean)
	rm -f *~

distclean-am:
	rm -f Makefile
