#
#  Makefile.in 	-- Makefile for GTklos Extension
#
# Copyright © 2021-2025 Erick Gallesio <eg@stklos.net>
#
#           Author: Erick Gallesio [eg@unice.fr]
#    Creation date: 18-Jun-2021 08:18
#

SUBDIRS=lib/stklos demos

clean-am:
	(cd demos && make clean)
	rm -f *~

distclean-am:
	rm -f doc/Makefile ./Makefile
