#
#  Makefile.in 	-- Makefile for GTklos Extension
#
# Copyright © 2021 Erick Gallesio - Polytech Nice-Sophia <eg@unice.fr>
#
#           Author: Erick Gallesio [eg@unice.fr]
#    Creation date: 18-Jun-2021 08:18
# Last file update:  8-Jul-2021 10:43 (eg)
#

SUBDIRS=src demos

clean-am:
	rm -f *~

distclean-am:
	rm -f Makefile
