#
#  Makefile.in 	-- Makefile for GTklos Extension
#
# Copyright © 2021-2022 Erick Gallesio - Polytech Nice-Sophia <eg@unice.fr>
#
#           Author: Erick Gallesio [eg@unice.fr]
#    Creation date: 18-Jun-2021 08:18
# Last file update:  1-Feb-2022 17:24 (eg)
#

SUBDIRS=lib/stklos demos

clean-am:
	rm -f *~

distclean-am:
	rm -f Makefile
