# Makefile for SILex/STklos
#
#           Author: Erick Gallesio [eg@essi.fr]
#    Creation date: 13-Dec-2003 10:54 (eg)
# Last file update: 31-Aug-2020 18:12 (eg)

schemedir   = $(prefix)/share/@PACKAGE@/@VERSION@
#scheme_DATA = silex.scm multilex.scm
SRC= silex.scm multilex.scm

install-sources:
	mkdir -p  $(DESTDIR)/$(schemedir)
	cp $(SRC) $(DESTDIR)/$(schemedir)


